// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTubeVideo should match init snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <YouTubeVideo
    googleDeveloperKey="googledevkey"
    hasImageProxy={false}
    link="https://www.youtube.com/watch?v=xqCoNej8Zxo"
    metadata={
      Object {
        "images": Array [
          Object {
            "secure_url": "linkForThumbnail",
            "url": "linkForThumbnail",
          },
        ],
        "title": "Youtube title",
      }
    }
    postId="post_id_1"
    show={true}
    youtubeReferrerPolicy={false}
  >
    <div
      className="post__embed-container"
    >
      <div>
        <h4>
          <span
            className="video-type"
          >
            YouTube - 
          </span>
          <span
            className="video-title"
          >
            <ForwardRef
              href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
              location="youtube_video"
            >
              <a
                href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
                location="youtube_video"
                onClick={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                Youtube title
              </a>
            </ForwardRef>
          </span>
        </h4>
        <div
          className="video-div embed-responsive-item"
        >
          <div
            className="video-thumbnail__container hq"
            onClick={[Function]}
          >
            <img
              alt=""
              className="video-thumbnail"
              onError={[Function]}
              src="https://img.youtube.com/vi/xqCoNej8Zxo/hqdefault.jpg"
            />
            <div
              className="play-button"
            >
              <i
                className="icon-play"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </YouTubeVideo>
</Provider>
`;

exports[`YouTubeVideo should match snapshot for playing state 1`] = `
<div
  className="post__embed-container"
>
  <div>
    <h4>
      <span
        className="video-type"
      >
        YouTube - 
      </span>
      <span
        className="video-title"
      >
        <ForwardRef
          href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
          location="youtube_video"
        >
          Youtube title
        </ForwardRef>
      </span>
    </h4>
    <div
      className="video-div embed-responsive-item"
    >
      <div
        className="video-thumbnail__container hq"
      >
        <iframe
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          frameBorder="0"
          src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&rel=0"
          title="Youtube title"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`YouTubeVideo should match snapshot for playing state and \`youtubeReferrerPolicy = true\` 1`] = `
<div
  className="post__embed-container"
>
  <div>
    <h4>
      <span
        className="video-type"
      >
        YouTube - 
      </span>
      <span
        className="video-title"
      >
        <ForwardRef
          href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
          location="youtube_video"
        >
          Youtube title
        </ForwardRef>
      </span>
    </h4>
    <div
      className="video-div embed-responsive-item"
    >
      <div
        className="video-thumbnail__container hq"
      >
        <iframe
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          frameBorder="0"
          src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&rel=0"
          title="Youtube title"
        />
      </div>
    </div>
  </div>
</div>
`;
